# mnist

./: .gitignore  Dockerfile  pyproject.toml  run.sh
note/: CNN.ipynb  Fashion_mnist.ipynb  Untitled.ipynb  mnist.keras  mnist240924.keras:Zone.Identifier  mnist984.keras
src/mnist/: .main.py.swp  .predict.py.swp  .worker.py.swo  .worker.py.swp  db.py  main.py  predict.py  worker.py
